<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_lightest"
    android:orientation="vertical"
    tools:context=".shopowner.activity.AddBank_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bank_details"
                    android:textColor="@color/red_bg"
                    android:textSize="@dimen/_16sdp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_45sdp"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_rounded_primary"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="@dimen/_18sdp"
                        android:layout_height="@dimen/_18sdp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/_9sdp"
                        android:background="@drawable/ic_baseline_refresh_24"
                        android:paddingLeft="@dimen/_5sdp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/_4sdp"
                        android:paddingRight="@dimen/_5sdp"
                        android:text="Refresh"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10sdp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_11sdp"
                android:gravity="right"
                android:orientation="horizontal">


                <LinearLayout
                    android:id="@+id/line_showbank"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:background="@drawable/btn_rounded_primary"
                    android:backgroundTint="@color/red_bg"
                    android:gravity="center"

                    android:orientation="horizontal"
                    android:padding="@dimen/_4sdp">

                    <ImageView
                        android:layout_width="@dimen/_18sdp"
                        android:layout_height="@dimen/_18sdp"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/ic_baseline_segment_24"
                        android:scaleType="centerCrop"
                        android:text="@string/add_shop_details" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/_4sdp"

                        android:text="@string/show_bank_details"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10sdp" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollIndicators="none"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_15sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingRight="@dimen/_15sdp"
            android:paddingBottom="@dimen/_15sdp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal">


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"

                    android:textColorHint="@color/grey_font2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_SBank_Name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:gravity="start"

                        android:hint="@string/bank_name"

                        android:inputType="textVisiblePassword"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:textSize="@dimen/_13sdp" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"

                    android:textColorHint="@color/grey_font2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_SBranch_Name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:hint="@string/branch_name"
                        android:inputType="textVisiblePassword"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:textSize="@dimen/_13sdp" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"

                    android:textColorHint="@color/grey_font2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_SIfsccode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:hint="@string/ifsc_code"
                        android:inputType="textVisiblePassword"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:textSize="@dimen/_13sdp" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"

                    android:textColorHint="@color/grey_font2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_SAHName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:hint="@string/acc_holder_name"
                        android:inputType="textVisiblePassword"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:textSize="@dimen/_13sdp" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"

                    android:textColorHint="@color/grey_font2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_SAccountNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:hint="@string/account_number"
                        android:inputType="textVisiblePassword"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:textSize="@dimen/_13sdp" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/or"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"

                    android:textColorHint="@color/grey_font2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_SUPIid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:gravity="start"
                        android:hint="@string/upi_id"
                        android:inputType="textVisiblePassword"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:textSize="@dimen/_13sdp" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"

                    android:textColorHint="@color/grey_font2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_SDefault"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:drawableRight="@drawable/ic_baseline_arrow_drop_down_24"
                        android:focusable="false"
                        android:gravity="start"
                        android:hint="@string/set_as_default"
                        android:inputType="textVisiblePassword"
                        android:text="@string/no"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:textSize="@dimen/_13sdp" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_40sdp"
                android:layout_marginBottom="@dimen/_30sdp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_ssubmit"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@drawable/btn_rounded_primary"
                    android:gravity="center"
                    android:text="@string/submit"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold" />

            </RelativeLayout>
        </LinearLayout>


    </androidx.core.widget.NestedScrollView>
</LinearLayout>